--- a/trainSchedule.html
+++ b/trainSchedule.html
@@ -57,7 +57,7 @@
                                     <th scope="col">Minutes Away</th>
                                 </tr>
                             </thead>
-                            <tbody>
+                            <tbody id="add-row">
                             </tbody>
                         </table>
                     </div>
@@ -101,7 +101,7 @@
     </div>
 
     <!-- JavaScript -->
-    <script src="train.js"></script>
+    <script src="assets/../train.js"></script>
 
 </body>
 
